--- a/app/src/main/res/drawable/widget_preview.xml
+++ b/app/src/main/res/drawable/widget_preview.xml
@@ -4,16 +4,19 @@
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" />
             <corners android:radius="8dp" />
+            <stroke android:width="1dp" android:color="#E0E0E0" />
         </shape>
     </item>
-    <item android:left="16dp" android:top="16dp">
+    <item android:left="16dp" android:right="16dp" android:top="16dp" android:bottom="16dp">
         <bitmap
             android:src="@drawable/ic_wifi"
-            android:tint="#2196F3" />
+            android:tint="#2196F3"
+            android:gravity="left|center_vertical" />
     </item>
-    <item android:left="64dp" android:top="16dp">
+    <item android:left="16dp" android:right="16dp" android:top="16dp" android:bottom="16dp">
         <bitmap
             android:src="@drawable/ic_bluetooth"
-            android:tint="#2196F3" />
+            android:tint="#2196F3"
+            android:gravity="right|center_vertical" />
     </item>
 </layer-list> 
